test/files/neg/t1371.scala
// scalac: -Yrangepos
trait A[T <: (_)]

