test/files/neg/t1371.check
t1371.scala:2: error: unbound wildcard type
trait A[T <: (_)]
              ^
one error found
